# safewrite

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/safewrite/: __init__.py  error_formatting.py  exceptions.py  fixing_loop.py  validated_document.py
src/safewrite/xml/: __init__.py  document.py  exceptions.py  validators.py
src/wellformed/: __init__.py  checkpoint.py  error_formatting.py  exceptions.py
src/wellformed/json/: __init__.py  document.py  exceptions.py  validators.py
src/wellformed/xml/: __init__.py  document.py  exceptions.py  validators.py
tests/: test_checkpoint.py  test_error_formatting.py  test_exceptions.py  test_fixing_loop.py  test_validated_document.py
tests/json/: test_json_document.py  test_json_validators.py
tests/xml/: test_xml_document.py  test_xml_validators.py
