[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wellformed"
version = "0.1.0"
description = "Invariant-preserving document wrappers with validate-repair fixing loops and atomic checkpoints, for agents that modify persistent structured content."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Sixty North", email = "systems+wellformed@sixty-north.com" }]
keywords = ["llm", "agent", "validation", "repair", "atomic", "document", "xml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
xml = ["lxml>=5.0"]

[dependency-groups]
test = ["pytest>=8", "pytest-asyncio>=0.24", "hypothesis>=6"]
dev = ["ruff>=0.6", {include-group = "test"}]

[project.urls]
Homepage = "https://github.com/sixty-north/wellformed"
Issues = "https://github.com/sixty-north/wellformed/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/wellformed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-p no:doctest"
minversion = "8.0"

[tool.ruff]
line-length = 120
target-version = "py311"
